name:                mbtiles-server
version:             0.1.0.0
synopsis:            Haskell MBTiles server using Servant
description:         Prototype of an MBTiles server in Haskell using Servant.
homepage:            https://github.com/caneroj1/mbtiles-server#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Canero
maintainer:          jmc41493@gmail.com
copyright:           Copyright: (c) 2017 Joe Canero
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable mbtiles-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , mbtiles
                     , mtl
                     , servant-server
                     , servant
                     , wai
                     , wai-extra
                     , warp
                     , wai-cors
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/caneroj1/mbtiles-server
